fixed ODIN logo and text, aligned more text.

--- a/styles.css
+++ b/styles.css
@@ -18,15 +18,13 @@ body{
 
 .left{
     background-image: url('./images/halie-west-25xggax4bSA-unsplash.jpg');
-    width: 35vw;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
-    font-family: Norse-Boldm sans-serif;
+    width: 35%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    
+    align-items: center; 
 }
 
 .right{
@@ -132,9 +130,10 @@ label{
 }
 
 .forImage{
-    height: 40vh;
+    height: 35vh;
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
 }
 
 .forFooter{
@@ -142,11 +141,26 @@ label{
     width: 35vh;
     display: flex;
     align-items: flex-end;
+    justify-content: center;
+    width: 35vh;
 }
 
 .semi-transparent{
-    display: flex-end;
+    display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    justify-content: center;
+    padding: 10px;
+    background-color: black; 
+    opacity:0.5;
+    height: 20vh;
+    width: 71vh;
+}
+
+h1{
+    font-size: 100px;
+    font-family: Norse-Bold, sans-serif;
+    font-weight: bold;
+    color: white;
+    margin: 0;
 }
